--- a/index.html
+++ b/index.html
@@ -674,7 +674,7 @@
             
             <div class="tools-grid">
                 <!-- Image Tools -->
-                <a href="Tools/img-compress.html" class="Tools/img-compress.html">
+                <a href="Tool/img-compress.html" class="Tool/img-compress.html">
             <div class="tool-card">
              <div class="tool-icon">
             <i class="fas fa-compress-alt"></i>
